--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <span class="text-center text-blue-500 my-4 hover:underline">Forgotten password</span>
             <hr class="my-2">
             <button class="bg-green-600 text-white text-lg py-3 px-4 font-semibold rounded-lg mx-auto my-5 hover:bg-green-700">Create New Account</button> 
-            <span class="absolute -bottom-10"><a class= "font-semibold hover:underline" href="">Create a Page</a> for a celebrity, brand or business.
+            <span class="absolute -bottom-10">
+                <a class= "font-semibold hover:underline" href="">Create a Page</a> for a celebrity, brand or business.
             </span>    
         </div>
 
